--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.2.0",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-dev-server": "^3.10.3"
   }
 }
